--- a/report.tex
+++ b/report.tex
@@ -391,6 +391,9 @@ We add the formality awareness joint training objective to the base backward-tra
 
 We therefore conclude that there is potential for more aggressive formality forcing on the backward-translator, and that formality awareness was not predominantly constrained by translation quality. As such, we decide to apply formality-dependent embeddings on the encoder output, similar to what we did with the sentence reconstructor.
 
+\subsection{Other attempts}
+In addition to back translation, we tried out different ideas for creating a formality tagged English corpus. With such a corpus, we'd be able to see if formality is properly preserved across the translation. For reasons mentioned throughout, however, there's not a definitive way to define formality in English as there is in Japanese or Korean. As such, we tried multiple artificial and intuitive ways of defining our own pseudo-formality. We tried counting unigrams in our existing corpus to determine "formal words", and we tried considering average word length or max word length as a factor to formality as well. In both of these cases, we slightly modified the same classifier we used for Japanese. Instead of considering the Japanese half of the parallel corpus, it considered the English half and categorized based on the factors stated. In the end, with some human evaluation, however, it became clear these methods were simply held back by the fact that they weren't truly correlated to any kind of underlying formality. As such, the translations did not seem to improve over the baseline, even if they technically preserved our pseudo-formality.
+
 \subsubsection{Back Translation with Multiplicative Formality Embedding}
 
 We next try applying a learned multiplicative formality embedding on the backward encoder output before passing it as argument to the backward decoder, hoping that it would allow us to control the decoder to emit sentences according to their original formality. We were able to get a BLEU score of $14.1$, a RIBES score of $26.6$, and a formality awareness of $.644$: while the base translation quality clear regressed, the formality awareness greatly increased, satisfying our objectives.
@@ -404,8 +407,6 @@ We next experiment with different weights for the translation and formality awar
     $.5$ & $.644$ & $14.1$ & $26.6$ \\
     $.09$ & $.017$ & $10.3$ & $23.2$ \\
 \end{tabular}
-
-We find our model to be sensitive to hyper-parameter choice, with performance collapsing when the loss weights deviate from the optimal weight distribution ($.5$). 
 
 \subsubsection{Back Translation with Additive Formality Embedding}
 
