--- a/report.tex
+++ b/report.tex
@@ -13,10 +13,7 @@
 \usepackage{graphicx}
 \usepackage{indentfirst}
 \usepackage[dvipsnames]{xcolor}
-\usepackage{xeCJK}
-\setCJKmainfont{IPAMincho}
-\setCJKsansfont{IPAGothic}
-\setCJKmonofont{IPAGothic}
+\usepackage{CJKutf8}
 
 \usepackage{listings}
 
@@ -91,6 +88,8 @@ style=alphabetic,
 
 
 \begin{document}
+\begin{CJK}{UTF8}{min}
+
 \title{Formality-Aware Neural Machine Translation for Japanese-English}
 
 \author{Henry Li Xinyuan, Jerry Chen, Ray Lee}
@@ -118,7 +117,7 @@ Formality is almost universal across all languages \cite{article}, and yet there
 In short, we would like our model to be able to perform two additional tasks, on top of translation:
 
 \begin{enumerate}[label=\arabic*]
-    \item Identify the formality class of the input sentence;
+    \item Indentify the formality class of the input sentence;
     \item Emit sentences in the target language with the correct formality class (which is either given as input, or generated automatically according to the input sentence).
 \end{enumerate}
 
@@ -156,6 +155,23 @@ Some corpora are already tokenised at sentence level and do not form part of a d
 The procedural classification scripts put each sentence into one of $3$ bins (formal, informal, inconclusive) according to the above-mentioned rules. Note the presence of the "inconclusive" class: these are the sentences that don't contain a formality marker (such as a well-conjugated verb, a copula, or an adjective): in some corpora (such as the subtitles corpus) they account for around one-third of the sentences. We simplify the task for our model by removing all inconclusive sentences and making formality classification a binary-classification task. 
 
 Due to the nature of the corpora that we chose, informal sentences outnumber formal sentences. We therefore randomly drop some informal sentences so that the number of formal and informal sentences are roughly equal.
+
+\paragraph{Examples of Classified Sentences}
+ 
+ .
+
+Informal: 同情してただけなんだ 
+
+In this example, there are multiple kinds of conjugation occuring in the sentence, but the classifier only cares about the conjugation of what it determines as the final verb: だ. だ endings are always short-form, though it might arise from different situations, so it gets classified as informal. \newline
+
+Formal: 別に驚くことではないですよね 
+
+This is an interesting example to pick out because it has more noise at the end. よ and ね are both sentence endings that give nuance to the tone of your statement, but they are not adjectives or verbs, and they do not determine the formality of a sentence. Fortunately, the classifier has no trouble parsing them for what they are, and it ignores them to focus on the final verb です, which is in long form. As such, the sentence is classified at formal.\newline
+
+Inconclusive: 四十六　メチルシクロヘキサノン
+
+This is an example of a technical, loan-word term. It doesn't have an equivalent in Japanese, so it's just sounded out, essentially. There's also no verbs or adjectives in the sentence. As such, the classifier can't find a conjugation to consider, and thus deems it inconclusive.
+
 
 \paragraph{Other languages: Korean}
 
@@ -219,7 +235,7 @@ The first type of common difficulty was cases where the Japanese sentences omitt
 
 "Seen five million times."
 
-In this case, the Japanese sentence is missing a subject. "Seen five million times" is a good word-for-word translation, but any Japanese person would understand that there is some object that being seen. Without contextual knowledge, the best way to handle this may be to use a generic pronoun, such as "it," creating the sentence, "it will be seen five million times." In this sentence specifically, the information contained in "will be" is also missing from our translation. Many other translations of this same structure were also missing tense information though, so we suspect that it has something to do with time-determiners like "will" or "has" being treated as attached to a subject; ie. they would be missing should the subject be missing.
+In this case, the Japanese sentence is missing a subject. "Seen five million times" is a good word-for-word translation, but any Japanese person would understand that there's some object that being seen. Without contextual knowledge, the best way to handle this may be to use a generic pronoun, such as "it," creating the sentence, "it will be seen five million times." In this sentence specifically, the information contained in "will be" is also missing from our translation. Many other translations of this same structure were also missing tense information though, so we suspect that it has something to do with time-determiners like "will" or "has" being treated as attached to a subject; ie. they would be missing should the subject be missing.
 
 There are some sentences where the translation loses information, though in many of these cases, the translation in still reasonable and sometimes even more reasonable without context. For example:
 
@@ -227,7 +243,7 @@ There are some sentences where the translation loses information, though in many
 
 "What are you doing Cyrus?"
 
-The translation provided in the parallel corpus is, "what the hell are you doing, Cyrus?" The "the hell" part got left out, but there is no word in the Japanese sentence the means "the hell." That information would entirely be gained from context or tone. As such, this is an interesting case where context-aside, the machine translation might be considered better than what a BLEU or RIBES score might say. Of course, this still speaks to the machine's weakness in situations where it does need to know context.
+The translation provided in the parallel corpus is, "what the hell are you doing, Cyrus?" The "the hell" part got left out, but there's no word in the Japanese sentence the means "the hell." That information would entirely be gained from context or tone. As such, this is an interesting case where context-aside, the machine translation might be considered better than what a BLEU or RIBES score might say. Of course, this still speaks to the machine's weakness in situations where it does need to know context.
 
 Finally, there are some sentences where the translation adds information. These are rare, and it's hard to find a pattern in why it's occurring, as the situations in which it occurs are varied. Often times the additions are conjunctions or articles rather than full on noun or verb phrases. For example: 
 
@@ -436,4 +452,5 @@ A number of other types of context could be used to improve translation quality.
 
 \newpage
 \printbibliography
+\end{CJK}
 \end{document}
