Add shameless plug

--- a/report.tex
+++ b/report.tex
@@ -462,6 +462,8 @@ Next we experiment with the additive formality embedding scheme, which had yield
 
 We found that pre-trained BERT does an adequate but not stellar job of encoding formality. We found that a joint objective training scheme, where the model is trained on both translation and formality awareness, can improve the formality awareness of the output sentences. We found that by applying a learned formality embedding on the decoder input, we can get significant further improvement on the formality awareness of the output sentences. The ideal type of formality embedding varies between different tasks.
 
+Our model implementation can be found at \url{https://github.com/HSTEHSTEHSTE/Formality_Multi_Domain_NMT}. Please contact the authors for the raw and tagged data used for this project.
+
 \section{Future Work}
 
 \subsection{Potential improvements to procedural formality evaluation}
